Get timestamp from feed instead of local time to ensure two computers running in different time won't cause issuesn

--- a/README
+++ b/README
@@ -5,6 +5,7 @@ QaikuBot 01
 
 * wokkel 0.3 or newer from http://wokkel.ik.nu/
 * simplejson from http://pypi.python.org/pypi/simplejson
+* egenix-mx-base from http://pypi.python.org/pypi/egenix-mx-base
 
 ## Contact
 
