--- a/README
+++ b/README
@@ -6,6 +6,7 @@ QaikuBot 01
 * wokkel 0.3 or newer from http://wokkel.ik.nu/
 * simplejson from http://pypi.python.org/pypi/simplejson
 * egenix-mx-base from http://pypi.python.org/pypi/egenix-mx-base
+* Twisted preferably 8.0.0 or newer from http://twistedmatrix.com
 
 ## Contact
 
