--- a/README
+++ b/README
@@ -5,7 +5,7 @@ QaikuBot 01
 
 * wokkel 0.3 or newer from http://wokkel.ik.nu/
 * simplejson from http://pypi.python.org/pypi/simplejson
-* egenix-mx-base from http://pypi.python.org/pypi/egenix-mx-base
+* markdown2 from http://code.google.com/p/python-markdown2/
 * Twisted preferably 8.0.0 or newer from http://twistedmatrix.com
 
 ## Contact
